--- a/render.yaml
+++ b/render.yaml
@@ -3,6 +3,7 @@ services:
     name: restoredoc
     runtime: python
     pythonVersion: "3.10"
+    rootDir: restoredoc
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
     envVars:
