--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,8 @@ services:
   - type: web
     name: restoredoc
     runtime: python
-    pythonVersion: "3.10"
-    rootDir: restoredoc
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "gunicorn app:app --bind 0.0.0.0:$PORT"
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
     envVars:
       - key: OPENAI_API_KEY
         sync: false
@@ -13,7 +11,3 @@ services:
         sync: false
       - key: SUPABASE_ANON_KEY
         sync: false
-      - key: FLASK_ENV
-        value: production
-      - key: FLASK_DEBUG
-        value: "False"
