--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ python-dotenv==1.0.0
 
 # Additional utilities
 requests==2.31.0
-Pillow==10.1.0  # For image processing
+Pillow==11.0.0  # For image processing (Python 3.13 compatible)
 reportlab==4.1.0  # For PDF generation
 python-dateutil==2.8.2
 
